# libwavebird

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libwavebird.slcc  libwavebird.slce
.github/workflows/: examples.yml  test.yml
examples/packet-logger/: README.md  app.c  app.slcp
include/wavebird/: message.h  packet.h  wavebird.h
scripts/: generate_rail_configs.sh
src/platform/efr32/efr32xg1/: rail_config.c  rail_config.h
src/platform/efr32/efr32xg14/: rail_config.c
src/platform/efr32/efr32xg22/: rail_config.c
test/: CMakeLists.txt  test_bch3121.c  test_packet.c
